Fixed menu button scrolling to top and set scroll to top to show alerts button on smaller screens - DP-19782

--- a/assets/scss/03-organisms/_header-hamburger.scss
+++ b/assets/scss/03-organisms/_header-hamburger.scss
@@ -7,7 +7,6 @@ body.show-menu {
   overflow: hidden;
 
   @media ($bp-header-toggle-max) {
-    position: fixed !important;
     left: 0;
   }
 }
